[PDI-11194] fixed case of summation of number values in number form to number values in empty string form